# mbgc

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
coders/: CodersLib.cpp  CodersLib.h  ContextAwareMismatchesCoder.cpp  ContextAwareMismatchesCoder.h  LzmaCoder.cpp  LzmaCoder.h  PpmdCoder.cpp  PpmdCoder.h  PropsLibrary.cpp  PropsLibrary.h  SymbolsPackingFacility.cpp  SymbolsPackingFacility.h  VarLenDNACoder.cpp  VarLenDNACoder.h
example-scripts/: GCA_000585755.1_Lm1823_genomic.fna  GCA_000585775.1_Lm1824_genomic.fna  GCA_000585795.1_Lm1840_genomic.fna  README.md  ex1.sh  ex2.sh  ex3.sh  ex4.sh  seqlist.txt
matching/: CopMEMMatcher.cpp  CopMEMMatcher.h  MGMP_API.h  MGMP_Params.h  MultipleGenomeMatchingProcessor.cpp  MultipleGenomeMatchingProcessor.h  SimpleSequenceMatcher.cpp  SimpleSequenceMatcher.h  SlidingWindowSparseEMMatcher.cpp  SlidingWindowSparseEMMatcher.h  SparseEMMatcher.cpp  SparseEMMatcher.h  TextMatchers.cpp  TextMatchers.h  input_with_libdeflate_wrapper.cpp  input_with_libdeflate_wrapper.h
matching/copmem/: CopMEMMatcher.cpp  CopMEMMatcher.h
mbgccoder/: MBGC_API.h  MBGC_Decoder.cpp  MBGC_Decoder.h  MBGC_Encoder.cpp  MBGC_Encoder.h  MBGC_Params.h
utils/: Hashes.h  helper.cpp  helper.h  igzip_wrapper.h  input_with_libdeflate_wrapper.cpp  input_with_libdeflate_wrapper.h  kseq.h  libdeflate_wrapper.cpp  libdeflate_wrapper.h
utils/hashes/: metrohash64.cpp
